- Fixed checkin button sizing to prevent extra margin and allow full width.
(cherry picked from commit 5c6769447521e02f342b5e8b310c099ce7931512)

--- a/RockWeb/Styles/_checkin-core.less
+++ b/RockWeb/Styles/_checkin-core.less
@@ -42,7 +42,8 @@ select.form-control {
 
 // Fix to allow SVGs inside of buttons.
 .btn svg {
-  width: 1em;
+  display: block;
+  width: auto;
   height: 1em;
   fill: currentColor;
 }
